--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "https://AnzhelaPopova.github.io/React_project/",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
