--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
