--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.9.0",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
